--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -51,6 +51,8 @@ jobs:
       - run: .\\run-in-roblox.exe .\\tests\\build.rbxlx -s .\\tests\\spec.lua -t 1800
       - run: Compress-Archive -Path .\\screenshots -DestinationPath .\\screenshots.zip
         if: always()
+      - run: ls
+        if: always()
       - uses: actions/upload-artifact@v1
         with:
           name: screenshots.zip
